# Rust-Full-Stack

./: .gitattributes  .gitignore  .install.sh.swp  .run-local.sh.swp  FUNDING.yml  LICENSE  READ.md  README.md  commit  commit.go  commit.py  dev.py  patreon.md  pdf  reset_commit.py  run-local.sh
JSON_webservice/server/: Cargo.toml
JSON_webservice/server/src/: main_without_cors_options_for_json.rs  tests.rs
JSON_webservice/server/src/http_model/: mod.rs
JSON_webservice/server/web/: index.js  index.wasm
React_Rust/server/actix/: Cargo.toml  Dockerfile  README.md  docker-build.bash  docker-local.bash  inspect.txt  loadtest.md
React_Rust/server/actix/src/: main.rs
React_Rust/server/warp/: Cargo.toml  loadtest.md
React_Rust/server/warp/public/: main.css
React_Rust/server/warp/src/: main.rs
actix/: Cargo.toml  bin.js
actix/migrations/2019-10-23-182850_create_products/: up.sql
actix/src/: README.md  main.rs  run.bash
actix/src/database/: main.rs
actix/src/database/handlers/: products.rs
actix/src/database/models/: product.rs
actix/src/database/refer/: main.rs
actix/src/database_complete/: db_connection.rs  schema.rs
actix/src/graphql/: README.md  main.rs  schema.rs
actix/src/graphql/refer/: main.rs
actix/src/graphql/resolvers/: mod.rs  product.rs  user.rs
actix/src/graphql/src/: schema.rs
actix/src/graphql/type_defs/: product.rs  user.rs
actix/src/hello_world/: Cargo.toml  main.rs
actix/src/json/: Cargo.toml  README.md  curl.bash  main.rs
actix/src/json/handlers/: json_test.rs  mod.rs
actix/src/protobuf/: .main.rs.swp  README.md  main.rs
actix/src/session/: main.rs
actix/src/static/: main.rs
actix/src/template/: main.rs
async/async_book/: Cargo.toml
async/async_book/src/: main.rs
async/concurrent_requests/: Cargo.toml  README.md
async/concurrent_requests/src/: main.rs  main_draft.rs
async/tokio/: Cargo.toml
auth/rust/warp/: Cargo.toml  LICENSE  README.md
auth/rust/warp/src/: main.rs
before/JSON_Webservice/web/: Cargo.toml  rollup.config.js
before/JSON_Webservice/web/src/: lib.rs
bench/criterion/: Cargo.toml
bench/criterion/benches/: fibonacci.rs
bots/teloxide/: Cargo.toml  Cargo_without_webserver.toml  README.md
bots/teloxide/community-bots/subreddit_reader/: README.md
bots/teloxide/src/: main.rs  test.sh
bots/teloxide/src/community-bots/: utils.rs
bots/teloxide/src/get/: get_draft.rs  main.rs  main_with_use_of_moved_value_ctx.rs  main_without_fp.rs
bots/teloxide/src/html/: main.rs
bots/teloxide/src/latest_posts/: main.rs  main_draft.rs
bots/teloxide/src/repetition/: main.rs  repetition_draft.rs
bots/teloxide/src/with_webserver/: main_draft_complicated.rs  main_draft_with_await_only.rs
commits/teloxide/with_webserver/: Cargo.toml
commits/teloxide/with_webserver/src/: main.rs
email/client/lettre/: Cargo.toml
email/client/lettre/src/: utils.rs
gRPC/tonic/: Cargo.toml  build.rs
gRPC/tonic/src/user/: client.rs  server.rs
gRPC/user/: Cargo.toml
gRPC/user/src/: main.rs  main_monolithic.rs
golang/nut/: Cargo.toml  LICENSE  Readme.md  clippy.toml
golang/nut/src/: concurrency_tests.rs  errors.rs  lib.rs  test_utils.rs  utils.rs
golang/nut/src/bucket/: bucket.rs  consts.rs  cursor.rs  cursor_item.rs  cursor_tests.rs  elemref.rs  ibucket.rs  mod.rs  stats.rs  tests.rs
golang/nut/src/consts/: mod.rs
golang/nut/src/db/: builder.rs  common.rs  db.rs  info.rs  mod.rs  stats.rs  tests.rs  txguard.rs
golang/nut/src/freelist/: mod.rs  tests.rs
golang/nut/src/meta/: mod.rs
golang/nut/src/node/: builder.rs  inode.rs  mod.rs  node.rs  tests.rs
golang/nut/src/page/: branch_page_element.rs  leaf_page_element.rs  mod.rs  page_data.rs  page_data_tests.rs  page_info.rs  tests.rs
golang/nut/src/tx/: builder.rs  mod.rs  stats.rs  tests.rs  tx.rs
grpc/user/: Cargo.toml  build.rs  user.sql
grpc/user/proto/user/: user.proto
grpc/user/src/: main.rs  main_monolithic.rs  models.rs
interval/async_std/: Cargo.toml
interval/async_std/src/: main.rs
macro/test/attribute/: Cargo.toml
macro/test/attribute/src/: lib.rs  main.rs
macro/test/include!/hello_world/: Cargo.toml
microservices_with_docker/mongodb/: Cargo.toml
microservices_with_docker/mongodb/src/: main.rs
microservices_with_docker/mongodb/src/models/: email.rs  email_refer.js
microservices_with_docker/warp_client/: Cargo.toml
microservices_with_docker/warp_client/benches/: user.rs
microservices_with_docker/warp_client/proto/user/: user.proto
microservices_with_docker/warp_client/src/: main.rs
microservices_with_docker/warp_client/src/crypto/: hash.rs  mod.rs
microservices_with_docker/warp_client/src/handlers/: mod.rs  user_handler.rs
microservices_with_docker/warp_client/src/models/: user.rs
selenium/login/: Cargo.toml  dev.py
selenium/login/src/: async_not_working.rs  main.rs
warp/database/1. without_db_pool/: Cargo.toml  loadtest.bash  loadtest.md  post.sql
warp/tera_and_static_files/: Cargo.toml  watch.bash
warp/tera_and_static_files/src/: main.rs
web/: Cargo.toml  install.sh  package.json
web/before/markdown/: README.md
web/before/modal/src/: lib.rs
web/before/router/: README.md
web/before/rust_blog/: README.md
web/before/static_files/: .READEME.md.swp  Cargo.toml  README.md
web/refer/: lib.rs
web/refer/npm/: mod.rs
web/reference_for_blog_posts/npm/: README.md
web/src/: lib.rs  lib_c.rs  main.rs  modal.rs  state.rs  ws_rs.rs
web/src/components/: chat_input.rs  code.rs  code_without_hljs.rs  image.rs  input.rs  message.rs  mod.rs  modal.rs  text.rs  video.rs  website.rs
web/src/http_model/: websocket_json.rs
web/src/npm/: emoji.rs
web/static/: MarkdownCSS.css  bundle.js  index.css  index.html  markdown.css  markdown_before.css  modal.css  npm.js  steadylearner.css
yew/router/: Cargo.toml  package.json
yew/router/src/: lib.rs  main.rs  router.rs
yew/router/static/: index.html  steadylearner.css
yew/rust_blog/: Cargo.toml  README.md  install.sh
yew/rust_blog/src/: code.rs  main.rs
yew/rust_blog/static/: index.css  index.html  markdown.css  steadylearner.css
(+1189 files in other folders)
