# https://rust-lang-nursery.github.io/api-guidelines/documentation.html#cargotoml-includes-all-common-metadata-c-metadata

[package]
name = "actix"
version = "0.1.0"
authors = ["www.steadylearner.com"]
edition = "2018"
autobins = false

# $cargo run --bin main will point to the path we define here(Should use autobins = false)
# Use $node bin.js project instead of manually type everytime.
[[bin]]
name = "main"
path = "src/main.rs"
[[bin]]
name = "hello_world"
path = "src/hello_world/main.rs"
[[bin]]
name = "json"
path = "src/json/main.rs"
[[bin]]
name = "static"
path = "src/static/main.rs"
[[bin]]
name = "template"
path = "src/template/main.rs"
[[bin]]
name = "graphql"
path = "src/graphql/main.rs"
[[bin]]
name = "protobuf"
path = "src/protobuf/main.rs"
[[bin]]
name = "database"
path = "src/database/main.rs"
[[bin]]
name = "session"
path = "src/session/main.rs"

[dependencies]
actix-web = "1.0.8"
actix-files = "0.1.6"
actix-identity = "0.1.0"
actix-session = "0.2.0"
actix-rt = "0.2.5"
futures = "0.1.29"
bytes = "0.4.12"
env_logger = "0.7.1"
serde = "1.0.101"
serde_json = "1.0.41"
serde_derive = "1.0.101"
json = "0.12.0"
console = "0.9.0"
# Template
tera = "0.11.20"
# Graphql
juniper = "0.14.0"
# gRPC
actix-protobuf = "0.4.1"
prost = "0.5.0"
prost-derive = "0.5.0"
# Postgresl
diesel = { version = "1.4.3", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
r2d2 = "0.8.6"
