[package]
authors = ["htttps://www.steadylearner.com"]
edition = "2018"
name = "fullstack_chat_app_client_by_steadylearner"
version = "0.1.0"

[[bin]]
name = "index"
path = "src/main.rs"

[dependencies]
stdweb = "0.4"
failure = "0.1.5"
serde_derive = "1.0.94"
serde = "1.0.94"
serde_json = "1.0.40"

[dependencies.yew]
git = "https://github.com/DenisKolodin/yew"

[lib]
name = "sl_lib"
path = "src/lib.rs"
