[package]
name = "concurrent_requests"
version = "0.1.0"
authors = ["www.steadylearner.com/blog/search/Rust"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["full"] }
reqwest = { version = "0.10", features = ["json"] }
futures = "0.3"

# serialize and deserialize
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.48"