[package]
name = "tokio"
version = "0.1.0"
authors = ["steadylearner <32325099+steadylearner@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2.9", features = ["full"] }
