[package]
name = "telegram"
version = "0.1.0"
authors = ["https://www.steadylearner.com/blog/search/Rust"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }

# https://doc.rust-lang.org/cargo/reference/specifying-dependencies.html#specifying-dependencies-from-git-repositories
# Use similar to this when you find a problem with the current version.
# teloxide = { git = "https://github.com/teloxide/teloxide", branch = "dev" }
teloxide = "0.2"
log = "0.4.8"
pretty_env_logger = "0.4.0"

# Make warp work with them.
warp = "0.2.1"
tokio = { version = "0.2.11", features = ["rt-threaded", "time", "stream", "fs", "macros", "uds"] }
futures = { version = "0.3", default-features = false, features = ["alloc"]}

# Test colored chat response.
console = "0.9.2"

# serialize and deserialize
serde = "1.0.104"
serde_derive = "1.0.104"
serde_json = "1.0.48"
fstrings = "0.2.2"
