[package]
name = "tonic-examples"
version = "0.1.0"
authors = ["www.steadylearner.com"]
edition = "2018"

[dependencies]
tonic = { version = "0.1.0-alpha.1", features = ["rustls"] }
bytes = "0.4"
prost = "0.5"
prost-derive = "0.5"
tokio = "=0.2.0-alpha.6"
futures-preview = { version = "=0.3.0-alpha.19", default-features = false, features = ["alloc"]}
async-stream = "0.1.2"
http = "0.1"
tower = "=0.3.0-alpha.2"
serde = "1.0.101"
serde_json = "1.0.41"
serde_derive = "1.0.101"
postgres = "0.15.2"
dotenv = "0.15.0"
# json = "0.12.0"
# console = "0.9.0"
# Postgresl

[build-dependencies]
tonic-build = "0.1.0-alpha.3"


