[package]
name = "client"
version = "0.1.0"
authors = ["steadylearner <32325099+steadylearner@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mongodb = "0.9.0"
bson = "0.14.0"
criterion = "0.3.0"
