[package]
name = "warp-with-tonic-grpc-server"
version = "0.1.0"
authors = ["www.steadylearner.com"]
edition = "2018"

[dependencies]
# gRPC client
tonic = { version = "0.1.0-beta.1", features = ["tls", "transport"] }
bytes = "0.4"
prost = "0.5"

tokio = { version = "0.2", features = ["rt-threaded", "time", "stream", "fs", "macros", "uds"] }
futures = { version = "0.3", default-features = false, features = ["alloc"]}
async-stream = "0.2"
http = "0.2"
tower = "0.3"
# Web server
warp = { git = "https://github.com/seanmonstar/warp" }

# Required for wellknown gRPC types
prost-types = "0.5"

# JSON and models/
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0.104"
# Hash
rand = "0.7.2"
rust-argon2 = "0.6.0"
#
console = "0.9.1"
log = "0.4.8"
pretty_env_logger = "0.3.1"
chrono = "0.4.10"
reqwest = "0.10.0"
criterion = "0.3.0"

# Tracing
# tracing = "0.1"
# tracing-subscriber =  { version = "0.2.0-alpha", features = ["tracing-log"] }
# tracing-attributes = "0.1"
# tracing-futures = "0.2"

[build-dependencies]
tonic-build = "0.1.0-beta.1"

[[bench]]
name = "user"
harness = false
