[package]
authors = ["htttps://www.steadylearner.com"]
edition = "2018"
name = "index"
version = "0.1.0"

[[bin]]
name = "index"
path = "src/main.rs"

[dependencies]
stdweb = "0.4"
log = "0.4"
web_logger = "0.1"
serde = { version = "1.0", features = ["derive"] }

[dependencies.yew]
git = "https://github.com/DenisKolodin/yew"

[lib]
name = "sl_lib"
path = "src/lib.rs"
