[package]
authors = ["htttps://www.steadylearner.com"]
edition = "2018"
name = "rust_blog_example_by_steadylearner"
version = "0.1.0"

[[bin]]
name = "index"
path = "src/main.rs"

[dependencies]
stdweb = "0.4.2"
failure = "0.1.5"

serde_derive = "1.0.94"
serde = "1.0.94"
serde_json = "1.0.40"

[dependencies.yew]
git = "https://github.com/yewstack/yew"

# If you find any dependency problem,
# 1. clone the repository with $git clone https://github.com/yewstack/yew.git 
# 2. use yew = { path = "../.." } instead of [dependencies.yew] part
# 3. Make blog folder in examples and then clone all the files here
# 4. Include it to Cargo.toml file with

# members = [
#  "examples/blog",
# ] 

# 5. $./install.sh && yarn watch:rs


[lib]
name = "sl_lib"
path = "src/lib.rs"
