[package]
name = "warp"
version = "0.1.0"
authors = ["www.steadylearner.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Make warp work with them.
warp = "0.2.1"
tokio = { version = "0.2", features = ["rt-threaded", "time", "stream", "fs", "macros", "uds"] }
futures = { version = "0.3", default-features = false, features = ["alloc"]}
# Help users to easily click the target localhost.
console = "0.9.1"

[dev-dependencies]
pretty_env_logger = "0.3.1"
