[package]
name = "telegram"
version = "0.1.0"
authors = ["https://www.steadylearner.com/blog/search/Rust"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }

teloxide = "0.2"
log = "0.4.8"
pretty_env_logger = "0.4.0"

# Make warp work with them.
warp = "0.2.1"
tokio = { version = "0.2.11", features = ["rt-threaded", "time", "stream", "fs", "macros", "uds"] }
futures = { version = "0.3", default-features = false, features = ["alloc"]}

