[package]
name = "database"
version = "0.1.0"
authors = ["www.steadylearner.com"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Make warp work with them.
warp = "0.2.1"
tokio = { version = "0.2", features = ["rt-threaded", "time", "stream", "fs", "macros", "uds"] }
futures = { version = "0.3", default-features = false, features = ["alloc"]}
# Help users to easily click the target localhost.
console = "0.9.1"
# Postgresl
diesel = { version = "1.4.3", features = ["postgres", "r2d2"] }
dotenv = "0.15.0"
r2d2 = "0.8.6"
# Serde
serde = "1.0.101"
serde_json = "1.0.41"
serde_derive = "1.0.101"
