[package]
name = 'static_files_react_tera_with_rust'
version = "0.1.0"
authors = ["www.steadylearner.com"]
edition = "2018"

[dependencies]
rocket = "0.4.2"
tera = "0.11.20"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["tera_templates"]

# template and markdown
tera = "0.11.20"
